tdf#165392 Save as should default to current document directory as well

As done in 3fa39a4dadc8e2777185465a6f7c9968c8cf44d1 for Export,
do the same for "Save as"/"Save a copy" as well.

Change-Id: I5135cff0f74d6673fcfc7fa090ed752bea1d59cb
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/184542
Reviewed-by: Samuel Mehrbrodt <samuel.mehrbrodt@allotropia.de>
Tested-by: Jenkins